src/objects/Next_Best_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Next Best Products</relationshipLabel>
        <relationshipName>Next_Best_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Date_of_Offer__c</fullName>
        <description>Proposed Date of Offer</description>
        <label>Proposed Date of Offer</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Offered Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Next Best Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Next Best Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>